force-app/main/default/objects/numm__Section__c/numm__Section__c.object-meta.xml
<CustomObject>
    <description>Objet des rubriques</description>
    <label>Rubrique</label>
    <nameField>
        <label>Rubrique</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rubriques</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>