force-app/main/default/objects/numm__Section__c/fields/numm__Axe_Rubrique__c.field-meta.xml
<CustomField>
    <fullName>numm__Axe_Rubrique__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Sélectionner l&#39;axe rubrique correspondant à votre rubrique</inlineHelpText>
    <label>Axe Rubrique</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>numm__SectionName__c.numm__IsFreeArea__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>numm__SectionName__c</referenceTo>
    <relationshipLabel>Rubriques</relationshipLabel>
    <relationshipName>Rubriques</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>