force-app/main/default/objects/numm__Section__c/fields/numm__ExternalId__c.field-meta.xml
<CustomField>
    <fullName>numm__ExternalId__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Sélectionner l&#39;axe rubrique correspondant à votre rubrique</inlineHelpText>
    <label>ExternalId</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>