force-app/main/default/objects/numm__Section__c/fields/numm__Regroupement_principal__c.field-meta.xml
<CustomField>
    <fullName>numm__Regroupement_principal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Sélectionner le regroupement principal correspondant à votre rubrique</inlineHelpText>
    <label>Regroupement principal</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>numm__Section__c.numm__Axe_Rubrique__c</field>
            <operation>equals</operation>
            <valueField>$Source.numm__Axe_Rubrique__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>numm__Section__c</referenceTo>
    <relationshipLabel>Rubriques</relationshipLabel>
    <relationshipName>Rubriques</relationshipName>
    <type>Lookup</type>
</CustomField>